[package]
name = "rust_menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lazy_static = "1.4.0"
# 名字: 需要和 lib 库中 Cargo.toml 中定义的 name 一致
# path: 指定路径 (相对于根项目的Cargo.toml)
linked_table = { path = "./linked_table" }
